welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:16: error: illegal start of simple expression
        gauche(;gauche())
               ^SlugSnail:16: error: ';' expected but ')' found.
        gauche(;gauche())
                        ^